# RPNcalculator

./: .gitignore  CMakeLists.txt  README.md
Include/: cutter.h  eval.h  shunting_yard.h  stack.h  token.h
SRC/: cutter.c  eval.c  main.c  shunting_yard.c  stack.c  token.c
